--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,9 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+
     <h2>Hello this is the index</h2>
     <% if (locals.firstName) { %>
-        <h4>Welcome <%= locals.firstName %></h4>
+        <h4>Welcome <%= locals.firstName %> <%= locals.lastName %> </h4>
+        <h5><%= locals.firstName.toUpperCase() %> </h5>
     <% } else { %>
         <h4>Welcome, please sign up</h4>
     <% } %>
